Redesign sentiment calendar with mood-based color coding and improved UI

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <div class="sentiment-trend sentiment-panel">
                         <h3>Daily mood</h3>
                         <p class="sentiment-note" id="sentiment-trend-note"></p>
-                        <div class="sentiment-chart" id="sentiment-daily-chart"></div>
+                        <div class="sentiment-calendar-container" id="sentiment-daily-chart"></div>
                     </div>
                     <div class="sentiment-participants sentiment-panel">
                         <h3>Members</h3>
