--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="control-row primary-controls">
                 <label class="control upload-control">
                     <span>Upload chat file</span>
-                    <input type="file" id="chat-file" accept=".txt">
+                    <input type="file" id="chat-file" accept="text/plain">
                 </label>
                 <div class="control custom-range hidden" id="custom-range-controls">
                     <span>Custom dates</span>
