--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             <div class="control-row primary-controls">
                 <label class="control upload-control">
                     <span>Upload chat file</span>
-                    <input type="file" id="chat-file" accept=".txt,text/plain">
+                    <input type="file" id="chat-file" accept=".txt,text/plain" multiple>
+                </label>
+                <label class="control upload-control" style="margin-top: 8px;">
+                    <span>Or select a folder (alternative)</span>
+                    <input type="file" id="chat-file-folder" webkitdirectory directory multiple>
                 </label>
                 <div class="control custom-range hidden" id="custom-range-controls">
                     <span>Custom dates</span>
