modified:   index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="control-row primary-controls">
                 <label class="control upload-control">
                     <span>Upload chat file</span>
-                    <input type="file" id="chat-file" accept=".txt,text/plain" multiple>
+                    <input type="file" id="chat-file" accept=".txt,text/plain" capture="filesystem">
                 </label>
                 <label class="control upload-control" style="margin-top: 8px;">
                     <span>Or select a folder (alternative)</span>
