--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
 
         <div class="page-controls full-span">
             <div class="control-row primary-controls">
-                <label class="control upload-control">
-                    <span>Upload chat file</span>
-                    <input type="file" id="chat-file" accept=".txt,text/plain" capture="filesystem">
-                </label>
-                <label class="control upload-control" style="margin-top: 8px;">
-                    <span>Or select a folder (alternative)</span>
-                    <input type="file" id="chat-file-folder" webkitdirectory directory multiple>
-                </label>
+                <div class="control upload-control">
+                    <div style="margin-bottom: 8px;">Upload WhatsApp chat export:</div>
+                    <div style="display: flex; gap: 8px;">
+                        <label class="button" style="margin: 0;">
+                            Select File
+                            <input type="file" id="chat-file" accept=".txt" style="display: none;">
+                        </label>
+                        <div style="font-size: 0.85em; color: var(--muted); align-self: center;">
+                            Select the exported .txt file from WhatsApp
+                        </div>
+                    </div>
+                </div>
                 <div class="control custom-range hidden" id="custom-range-controls">
                     <span>Custom dates</span>
                     <div class="custom-range-inputs">
