--- a/index.html
+++ b/index.html
@@ -30,16 +30,9 @@
         <div class="page-controls full-span">
             <div class="control-row primary-controls">
                 <div class="control upload-control">
-                    <div style="margin-bottom: 8px;">Upload WhatsApp chat export:</div>
-                    <div style="display: flex; gap: 8px;">
-                        <label class="button" style="margin: 0;">
-                            Select File
-                            <input type="file" id="chat-file" accept=".txt" style="display: none;">
-                        </label>
-                        <div style="font-size: 0.85em; color: var(--muted); align-self: center;">
-                            Select the exported .txt file from WhatsApp
-                        </div>
-                    </div>
+                    <span>Upload WhatsApp chat</span>
+                    <input type="file" id="chat-file" accept=".txt,text/plain">
+                  
                 </div>
                 <div class="control custom-range hidden" id="custom-range-controls">
                     <span>Custom dates</span>
