--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </label>
                     <label class="control upload-control" id="file-upload-android" style="display: none;">
                         <span>Select WhatsApp chat folder (Android)</span>
-                        <input type="file" id="chat-file-folder" webkitdirectory directory multiple>
+                        <input type="file" id="chat-file" accept=".txt,text/plain">
                     </label>
                 </div>
                 <script>
