--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div class="section-nav-inner">
                 <a href="#summary">Overview</a>
                 <a href="#insight-highlights">Highlights</a>
+                <a href="#relay-control-card">Relay</a>
                 <a href="#daily-activity">Day by Day</a>
                 <a href="#weekly-trend">Week by Week</a>
                 <a href="#weekday-trend">Day of the Week</a>
                 <a href="#timeofday-trend">Time of Day</a>
                 <a href="#sentiment-overview">Mood</a>
                 <a href="#message-types">Message Mix</a>
-                <a href="#delivery-card">Delivery</a>
                 <a href="#polls-card">Polls</a>
                 <a href="#saved-views-card">Saved Setups</a>
                 <a href="#search-panel">Search Messages</a>
@@ -35,6 +35,19 @@
                     <span>Upload WhatsApp chat </span>
                     <input type="file" id="chat-file" accept=".txt,text/plain">
                   
+                </div>
+                <label class="control dataset-control">
+                    <span>Loaded chats</span>
+                    <select id="chat-selector" disabled>
+                        <option value="">No chats loaded yet</option>
+                    </select>
+                </label>
+                <div class="control live-chats-panel">
+                    <div class="live-chats-header">
+                        <span>Live WhatsApp chats</span>
+                        <button type="button" class="ghost-button small" id="refresh-live-chats">Refresh</button>
+                    </div>
+                    <div id="live-chat-list" class="live-chat-list" aria-live="polite"></div>
                 </div>
                 <div class="control custom-range hidden" id="custom-range-controls">
                     <span>Custom dates</span>
@@ -67,6 +80,39 @@
 
         <p id="data-status" class="status full-span"></p>
 
+        <section class="card full-span" id="relay-control-card">
+            <div class="card-header">
+                <div class="card-title-group">
+                    <h2>Relay Control</h2>
+                    <div class="card-header-actions">
+                        <button type="button" class="ghost-button small" id="relay-start-button">Start relay</button>
+                        <button type="button" class="ghost-button small" id="relay-stop-button">Stop relay</button>
+                        <button type="button" class="card-toggle" aria-expanded="true" data-target="relay-control-content">▾</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-content" id="relay-control-content">
+                <div class="relay-status-grid">
+                    <div>
+                        <span class="relay-status-label">Relay status</span>
+                        <div id="relay-status-indicator" class="relay-status-indicator" aria-live="polite">Not connected</div>
+                        <p class="relay-status-meta" id="relay-status-meta"></p>
+                    </div>
+                    <div>
+                        <span class="relay-status-label">Manager endpoint</span>
+                        <p class="relay-status-meta" id="relay-endpoint-display">—</p>
+                    </div>
+                </div>
+                <div class="relay-log-wrapper">
+                    <div class="relay-log-toolbar">
+                        <span>Live logs & QR output</span>
+                        <button type="button" class="ghost-button small" id="relay-log-clear">Clear</button>
+                    </div>
+                    <pre id="relay-log-view" class="relay-log-view" aria-live="polite"></pre>
+                </div>
+            </div>
+        </section>
+
         <section id="summary" class="card-grid summary full-span"></section>
 
         <section class="card full-span highlights" id="insight-highlights">
@@ -78,52 +124,6 @@
             </div>
             <div class="card-content" id="insight-highlights-content">
                 <div class="highlight-grid" id="highlight-list"></div>
-            </div>
-        </section>
-
-        <section class="card full-span" id="delivery-card">
-            <div class="card-header">
-                <div class="card-title-group">
-                    <h2>Delivery & Replies</h2>
-                    <button type="button" class="card-toggle" aria-expanded="true" data-target="delivery-content">▾</button>
-                </div>
-            </div>
-            <div class="card-content" id="delivery-content">
-                <p class="section-note" id="delivery-note">WhatsApp delivery signals (ack states), forwards, and replies observed by the live relay.</p>
-                <div class="delivery-summary">
-                    <div class="stat">
-                        <span class="stat-label">Seen rate</span>
-                        <span class="stat-value" id="delivery-seen-rate">0%</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-label">Delivered</span>
-                        <span class="stat-value" id="delivery-delivered-rate">0%</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-label">Forwarded messages</span>
-                        <span class="stat-value" id="forward-count">0</span>
-                        <span class="stat-sub" id="forward-share">0% of all messages</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-label">Replies</span>
-                        <span class="stat-value" id="reply-count">0</span>
-                        <span class="stat-sub" id="reply-share">0% of all messages</span>
-                    </div>
-                </div>
-                <div class="delivery-grid">
-                    <div class="delivery-panel">
-                        <h3>Delivery states</h3>
-                        <ul class="ack-list" id="delivery-ack-list"></ul>
-                    </div>
-                    <div class="delivery-panel">
-                        <h3>Top forwarders</h3>
-                        <ol class="mini-list" id="forward-top-list"></ol>
-                    </div>
-                    <div class="delivery-panel">
-                        <h3>Latest replies</h3>
-                        <ol class="reply-list" id="reply-list"></ol>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -470,52 +470,6 @@
                 </div>
             </div>
         </section>
-        <section class="card full-span" id="delivery-card">
-            <div class="card-header">
-                <div class="card-title-group">
-                    <h2>Delivery & Replies</h2>
-                    <button type="button" class="card-toggle" aria-expanded="true" data-target="delivery-content">▾</button>
-                </div>
-            </div>
-            <div class="card-content" id="delivery-content">
-                <p class="section-note" id="delivery-note">WhatsApp delivery signals (ack states), forwards, and replies observed by the live relay.</p>
-                <div class="delivery-summary">
-                    <div class="stat">
-                        <span class="stat-label">Seen rate</span>
-                        <span class="stat-value" id="delivery-seen-rate">0%</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-label">Delivered</span>
-                        <span class="stat-value" id="delivery-delivered-rate">0%</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-label">Forwarded messages</span>
-                        <span class="stat-value" id="forward-count">0</span>
-                        <span class="stat-sub" id="forward-share">0% of all messages</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-label">Replies</span>
-                        <span class="stat-value" id="reply-count">0</span>
-                        <span class="stat-sub" id="reply-share">0% of all messages</span>
-                    </div>
-                </div>
-                <div class="delivery-grid">
-                    <div class="delivery-panel">
-                        <h3>Delivery states</h3>
-                        <ul class="ack-list" id="delivery-ack-list"></ul>
-                    </div>
-                    <div class="delivery-panel">
-                        <h3>Top forwarders</h3>
-                        <ol class="mini-list" id="forward-top-list"></ol>
-                    </div>
-                    <div class="delivery-panel">
-                        <h3>Latest replies</h3>
-                        <ol class="reply-list" id="reply-list"></ol>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <section class="card full-span" id="polls-card">
             <div class="card-header">
                 <div class="card-title-group">
