Update analytics and UI files
- Update analytics data with latest metrics
- Refresh chat data with new conversations
- Update main UI with improved layout and functionality

--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
                     <h2>Message Mix</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-message-types">Download CSV</button>
+                        <button type="button" class="ghost-button" id="download-chat-json">Download chat JSON</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="message-types-content">▾</button>
                     </div>
                 </div>
