Update UI components and analytics
- Enhanced index.html with improved layout
- Updated main.js with additional functionality
- Refined styles.css for better user experience

--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
 
         <div class="page-controls full-span">
             <div class="control-row primary-controls">
-                <div class="control upload-control">
-                    <span>Upload WhatsApp chat </span>
-                    <input type="file" id="chat-file" accept=".txt,text/plain">
-                  
-                </div>
                 <label class="control dataset-control">
                     <span>Loaded chats</span>
                     <select id="chat-selector" disabled>
@@ -76,7 +71,7 @@
             <div class="card-header">
                 <div class="card-title-group">
                     <h2>Connect to WhatsApp</h2>
-                    <p class="card-subtitle">Skip file uploads by mirroring your chats with whatsapp-web.js.</p>
+                    <p class="card-subtitle">Mirror your chats with whatsapp-web.js.</p>
                 </div>
                 <div class="card-header-actions">
                     <button type="button" class="ghost-button small" id="whatsapp-refresh" disabled>Refresh chats</button>
@@ -480,7 +475,7 @@
                 </div>
             </div>
             <div class="card-content" id="polls-content">
-                <p class="section-note" id="polls-note">Poll questions detected in your uploaded chats.</p>
+                <p class="section-note" id="polls-note">Poll questions detected in your mirrored chats.</p>
                 <div class="polls-summary">
                     <div class="stat">
                         <span class="stat-label">Total polls</span>
